src/objects/Zuora__SubscriptionRatePlanHistory__c.object
<CustomObject>
    <description>Rate plans represent a price or a collection of prices for a service you sell.</description>
    <fields>
        <fullName>Zuora__AmendmentType__c</fullName>
        <description>The type of amendment associated with the rate plan. This field only applies to amendment rate plans.</description>
        <label>Amendment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__CreatedDate__c</fullName>
        <description>The date when the Subscription Rate Plan was created in the Zuora system.</description>
        <label>Zuora Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zuora__External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Zuora__SubscriptionHistory__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Subscription</label>
        <referenceTo>Zuora__SubscriptionHistory__c</referenceTo>
        <relationshipLabel>Subscription Rate Plans History</relationshipLabel>
        <relationshipName>Subscription_Rate_Plans_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zuora__SubscriptionRatePlanName__c</fullName>
        <description>Full rate plan name.</description>
        <label>Subscription Rate Plan Name (Long Name)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__UpdatedDate__c</fullName>
        <description>The date when the Subscription Rate Plan was updated in the Zuora system.</description>
        <label>Zuora Updated Date</label>
        <type>DateTime</type>
    </fields>
    <label>Subscription Rate Plan History</label>
    <listViews>
        <fullName>Zuora__All</fullName>
        <columns>NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Zuora__External_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Subscription Rate Plan Name (Short Name)</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscription Rate Plans History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>